# OpenCortex

./: .gitignore  CHANGELOG.md  CODE_REVIEW_REPORT.md  CONTRIBUTING.md  EXECUTION_PLAN.md  IMPLEMENTATION_COMPLETE.md  LICENSE  README.md  WORKTREE_ISOLATION_IMPLEMENTATION.md  calc.py  demo_worktree_isolation.py  hello.py  p1.py  p2.py  p3.py  package.json  pyproject.toml  utils.py  z_test.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  (+1 more)
audit_reports/: 01_hermes_audit.md  tican_project_understanding.md
docs/: ARCHITECTURE.md  HERMES_ANALYSIS.md  MCP_SERVER.md  SHOWCASE.md  SKILLS.md  SKILL_DEV_GUIDE.md  SKILL_STANDARDIZATION_SUMMARY.md  SKILL_TEMPLATE.md  agentsys-integration-plan.md  bridge-protocol-evaluation.md  hermes-fusion-plan.md  multimodal-collaboration-evaluation.md
scripts/: e2e_smoke.py  local_system_scenarios.py  react_tui_e2e.py  test_cli_flags.py  test_harness_features.py  test_headless_rendering.py  test_react_tui_redesign.py  test_real_skills_plugins.py  test_tui_interactions.py
tests/: _start_server.py  test_a2a.py  test_a2a_concurrent.py  test_a2a_phase2.py  test_api_server.py  test_auxiliary.py  test_credential_pool.py  test_dispatcher.py  test_fixes_top3.py  test_hooks_skills_plugins_real.py  test_intent.py  test_mcp_server.py  test_memory_fts.py  test_merged_prs_on_autoagent.py  test_opencortex_integration.py  test_persistence.py  test_profile.py  test_progressive_6layer.py  test_real_large_tasks.py  test_security.py  test_security_e2e.py  test_trajectory.py  test_untested_features.py
(+425 files in other folders)
